@startuml
class ServiceCenterController {
    + ServiceCenterController(context:DBContext)
    + Exists(id:string) : bool
    + <<async>> Create(template:ServiceCenter) : Task<ActionResult<string>>
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> All() : Task<ActionResult<string>>
    + <<async>> Update(id:string, template:ServiceCenter) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:ServiceCenter) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + Settings() : string
}
class "IUserInterfaceCRUD`1"<T> {
}
class "GenericRepository`1"<T> {
}
ControllerBase <|-- ServiceCenterController
"IUserInterfaceCRUD`1" "<ServiceCenter>" <|-- ServiceCenterController
ServiceCenterController --> "ServiceCenterRepository<ServiceCenter>" "GenericRepository`1"
ServiceCenterController --> "UserRepository<User>" "GenericRepository`1"
ServiceCenterController o-> "settings" JsonSerializerSettings
@enduml
